# rcli

./: Cargo.toml  README.md
fixtures/: blake3.txt  chacha20poly1305-decrypt-b64.txt  chacha20poly1305-decrypt.txt  chacha20poly1305.txt  ed25519.pk  ed25519.sk  jwt-secret.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
