[package]
name = "rcli"
authors = ["xrz"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
blake3 = "1.5.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
toml = "0.8.12"
zxcvbn = "3.0.1"
humantime = "2.1.0"
jsonwebtoken = "9.3.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
